--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -44,7 +44,7 @@ transform()
   .navbar-brand img
     width 170px
 
-.form-search
+.navbar .form-search
   width 50%
   margin 5px 0 0 200px
   .icon-search
@@ -443,14 +443,14 @@ transform()
     cursor pointer
 
 @media all and (max-width: 1280px)
-  .form-search
+  .navbar .form-search
     width 40%
   .navbar-brand
     padding-left 0
     padding-right 0
 
 @media all and (max-width: 1000px)
-  .form-search
+  .navbar .form-search
     width 20%
 
 @media all and (max-width: 768px),screen and (device-width: 320px)
