--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -33,11 +33,11 @@ h1 {
 .navbar-container .navbar-brand img {
   width: 170px;
 }
-.form-search {
+.navbar .form-search {
   width: 50%;
   margin: 5px 0 0 200px;
 }
-.form-search .icon-search:hover {
+.navbar .form-search .icon-search:hover {
   text-decoration: none;
 }
 .ace-nav>li a {
@@ -486,7 +486,7 @@ h1 {
   cursor: pointer;
 }
 @media all and (max-width: 1280px) {
-  .form-search {
+  .navbar .form-search {
     width: 40%;
   }
   .navbar-brand {
@@ -495,7 +495,7 @@ h1 {
   }
 }
 @media all and (max-width: 1000px) {
-  .form-search {
+  .navbar .form-search {
     width: 20%;
   }
 }
