--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -710,11 +710,21 @@ transform()
   border-top 1px solid rgb(80, 144, 193)
   .talks-title-left
     float left
-    a
-      font-weight bold
-      font-size 16px
+    .talks-title-links
+      margin-left 55px
+      a
+        display block
+      a:first-child
+        font-weight bold
+        font-size 16px
+        margin-bottom 7px
   .talks-title-right
     float right
+    .adverts-comments
+      padding-top 5px
+      span
+        display inline-block
+        margin-right 20px
 
 .talks-block
   padding 0 10px
