--- a/vonline_be/war/partials/adverts.html
+++ b/vonline_be/war/partials/adverts.html
@@ -76,16 +76,19 @@
 
             <div class="talks-title" ng-repeat="advert in adverts.topics" id="{{advert.id}}">
                 <div class="talks-title-left load-talk">
-                    <div><a ui-sref="adverts-single({ advertId : {{advert.id}} })">{{advert.subject}}</a></div>
-                    <div>{{advert.messageNum}} сообщений</div>
+                    <a ui-sref="profile({ userId : {{advert.userInfo.id}} })" class="avatar short2 pull-left" style="background-image: url('{{ advert.userInfo.avatar }}')"></a>
+                    <div class="talks-title-links">
+                        <a ui-sref="adverts-single({ advertId : {{advert.id}} })">{{advert.subject}}</a>
+                        <a ui-sref="profile({ userId : {{advert.userInfo.id}} })">{{advert.userInfo.firstName + " "+advert.userInfo.lastName}}</a>
+                    </div>
+
                 </div>
                 <div class="talks-title-right">
                                 <span class="label label-lg arrowed lenta-item-hashtag pull-right"
                                       ng-class="advert.tagColor">{{advert.label}}</span>
                     <div class="clearfix"></div>
 
-                    <div>Последнее обновление:</div>
-                    <div>{{advert.lastUpdateEdit}}</div>
+                    <div class="adverts-comments"><span>{{advert.messageNum}} комментариев</span>  Создано: {{advert.message.created*1000 | date:'dd.MM.yy HH:mm'}}</div>
                 </div>
             </div>
 
