--- a/vonline_be/war/partials/talks.html
+++ b/vonline_be/war/partials/talks.html
@@ -85,7 +85,7 @@
                     <div class="clearfix"></div>
 
                     <div>Последнее обновление:</div>
-                    <div>{{talk.lastUpdateEdit}}</div>
+                    <div class="align-right">{{talk.lastUpdateEdit}}</div>
                 </div>
             </div>
 
