--- a/vonline_be/war/partials/adverts-single.html
+++ b/vonline_be/war/partials/adverts-single.html
@@ -120,7 +120,7 @@
                                     <div class="widget-main">
                                         <div class="topic-left">
                                             <a ui-sref="profile({userId: {{ firstMessage.userInfo.id }} })">
-                                                <div class="avatar" style="background-image: url({{firstMessage.userInfo.avatar}})"></div>
+                                                <div class="avatar short2" style="background-image: url({{firstMessage.userInfo.avatar}})"></div>
                                                 <!--<img ng-src="{{firstMessage.userInfo.avatar}}" alt="картинка" /></a>-->
                                             <div class="topic-author">
                                                 <a class="fa plus-minus" href="#" ng-class="{ 'fa-plus' : !firstMessage.isTreeOpen,'fa-minus' : firstMessage.isTreeOpen}"
@@ -184,7 +184,7 @@
                                             <div class="widget-main">
                                                 <div class="topic-left">
                                                     <a ui-sref="profile({ userId : {{ message.userInfo.id }} })">
-                                                        <div class="avatar" style="background-image: url({{message.userInfo.avatar}})"></div>
+                                                        <div class="avatar short2" style="background-image: url({{message.userInfo.avatar}})"></div>
                                                         <!--<img ng-src="{{message.userInfo.avatar}}" alt="картинка" /></a>-->
                                                     <div class="topic-author">
                                                         <a class="fa plus-minus" href="#" ng-class="{ 'fa-plus' : !message.isTreeOpen,'fa-minus' : message.isTreeOpen}"
