--- a/vonline_be/war/partials/neighbours.html
+++ b/vonline_be/war/partials/neighbours.html
@@ -15,7 +15,7 @@
         <div class="nextdoor-single" ng-repeat="neighboor in neighbours.neighboors">
             <a ui-sref="profile({ userId : neighboor.id})" class="nextdoor-left pull-left">
             <span class="nextdoor-ava pull-left">
-                <div class="avatar" style="background-image: url({{neighboor.avatar}})"></div>
+                <div class="avatar short2" style="background-image: url({{neighboor.avatar}})"></div>
                 <!--<img src="{{neighboor.avatar}}" alt="аватарка"/>-->
             </span>
                 <span class="nextdoor-name">{{neighboor.firstName+" "+neighboor.lastName}}</span>
