--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -105,7 +105,7 @@ h1 {
 }
 .nav-list > li.active > a,
 .nav-list > li.active:hover a {
-  font-weight: normal;
+  font-weight: normal !important;
 }
 .nav-list > li.active > a:before,
 .nav-list > li.active:hover a:before {
@@ -287,7 +287,7 @@ h1 {
   text-decoration: none;
 }
 .topic-item .topic-descr header h2 {
-  margin: 0 100px 0 110px;
+  margin: 0 100px 0 90px;
   vertical-align: middle;
   height: 39px;
   line-height: 39px;
@@ -309,7 +309,7 @@ h1 {
   vertical-align: middle;
 }
 .topic-item .topic-descr .topic-right {
-  margin-left: 115px;
+  margin-left: 95px;
 }
 .topic-item .topic-descr .topic-right h2 {
   margin-top: 0;
@@ -347,7 +347,7 @@ h1 {
 .topic-item .topic-descr .topic-left {
   float: left;
   text-align: center;
-  width: 95px;
+  width: 55px;
 }
 .topic-item .topic-descr .topic-left .plus-minus {
   font-size: 30px;
@@ -427,6 +427,12 @@ h1 {
 .topic-item .topic-descr.one-message .message-author {
   margin-bottom: 10px;
   font-size: 14px;
+}
+.topic-item .dd-list .topic-right {
+  margin-left: 60px;
+}
+.dd-list .dd-list {
+  padding-left: 37px;
 }
 .one-message .like-item .fa {
   margin-right: 5px;
@@ -540,7 +546,6 @@ h1 {
 }
 .create-topic .topic-body textarea {
   width: 100%;
-  height: 90px;
   overflow: hidden;
 }
 .create-topic >.btn-group {
@@ -581,12 +586,11 @@ h1 {
 }
 .message-input {
   padding: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
   background: #ddedf6;
 }
 .message-input textarea {
   width: 100%;
-  height: 90px;
   overflow: hidden;
 }
 .message-input .message-input-bottom {
@@ -715,9 +719,6 @@ h1 {
   display: inline-block;
   width: 15%;
 }
-.lenta-item {
-  margin-bottom: 20px;
-}
 .lenta-item .wallitem-message,
 .lenta-item .wallitem-topic {
   margin: 0 10px;
@@ -746,7 +747,7 @@ h1 {
   width: 100px;
 }
 .lenta-item .first-message .body {
-  margin-left: 110px;
+  margin-left: 90px;
 }
 .lenta-item .first-message .body .time {
   float: right;
@@ -781,9 +782,12 @@ h1 {
 .lenta-item .lenta-item-hashtag {
   float: right;
 }
+.itemdiv.dialogdiv > .body {
+  margin-left: 58px;
+}
 .avatar {
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
@@ -817,6 +821,10 @@ h1 {
 }
 .talks-title .talks-title-left {
   float: left;
+}
+.talks-title .talks-title-left >a {
+  font-weight: bold;
+  font-size: 16px;
 }
 .talks-title .talks-title-left .talks-title-links {
   margin-left: 55px;
@@ -970,7 +978,7 @@ h1 {
   width: 70px;
 }
 .nextdoors .nextdoor-single .nextdoor-left .nextdoor-name {
-  margin-left: 110px;
+  margin-left: 58px;
 }
 .nextdoors .nextdoors-amount {
   margin: 15px 0 0 0;
