--- a/vonline_be/war/partials/talks.html
+++ b/vonline_be/war/partials/talks.html
@@ -38,12 +38,12 @@
                         <span>группа</span>
                         <div class="btn-group hashtag-dropdown">
                             <button data-toggle="dropdown" class="btn btn-info btn-sm dropdown-toggle no-border" data-producerid="0">
-                                <span class="btn-group-text"># {{talks.selectedGroup.visibleName}}</span>
+                                <span class="btn-group-text"># {{base.bufferSelectedGroup.visibleName}}</span>
                                 <span class="icon-caret-down icon-on-right"></span>
                             </button>
 
                             <ul class="dropdown-menu dropdown-blue">
-                                <li ng-repeat="group in talks.groups"><a href="#" ng-click="talks.selectGroupInDropdown(group.id,talks)"># {{group.visibleName}}</a></li>
+                                <li ng-repeat="group in talks.groups"><a href="#" ng-click="selectGroupInDropdown_talks(group.id)"># {{group.visibleName}}</a></li>
                             </ul>
                         </div>
                     </div>
@@ -72,11 +72,11 @@
 
         </section>
 
-        <section class="talks-title-block"> <!--  ng-show="base.isTalkTitles" -->
+        <section class="talks-title-block">
 
             <div class="talks-title" ng-repeat="talk in talks.topics" id="{{talk.id}}">
                 <div class="talks-title-left load-talk">
-                    <div><a ui-sref="talks-single({ talkId : {{talk.id}} })">{{talk.subject}}</a></div> <!--  ng-click="showFullTalk($event,talk)" -->
+                    <a ui-sref="talks-single({ talkId : {{talk.id}} })">{{talk.subject}}</a>
                     <div>{{talk.messageNum}} сообщений</div>
                 </div>
                 <div class="talks-title-right">
