--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -649,6 +649,7 @@ transform()
       .input-group-btn
         display block
         margin-top 10px
+        margin-bottom 10px
         width 100%
   .first-message
     border 1px solid #D7DBDD
@@ -660,6 +661,7 @@ transform()
         width 100px
     .body
       margin-left 90px
+      padding-bottom 20px
       .time
         float right
       .tools
