--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -34,7 +34,7 @@ h1 {
   width: 170px;
 }
 .navbar .form-search {
-  width: 50%;
+  width: 40%;
   margin: 5px 0 0 200px;
 }
 .navbar .form-search .icon-search:hover {
@@ -187,7 +187,7 @@ h1 {
   padding: 15px 10px 15px 0;
 }
 .submenu .btn {
-  display: block !important;
+  display: block;
   font-size: 14px;
   margin-left: 1px;
   border: 0;
@@ -493,7 +493,7 @@ h1 {
 }
 @media all and (max-width: 1280px) {
   .navbar .form-search {
-    width: 40%;
+    width: 30%;
   }
   .navbar-brand {
     padding-left: 0;
@@ -502,7 +502,7 @@ h1 {
 }
 @media all and (max-width: 1000px) {
   .navbar .form-search {
-    width: 20%;
+    width: 10%;
   }
 }
 @media all and (max-width: 768px), screen and (device-width: 320px) {
@@ -966,6 +966,7 @@ h1 {
 .nextdoors .form-search {
   margin-bottom: 20px;
   width: 100%;
+  clear: both;
 }
 .nextdoors .nextdoor-single {
   padding: 10px;
