--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -45,7 +45,7 @@ transform()
     width 170px
 
 .navbar .form-search
-  width 50%
+  width 40%
   margin 5px 0 0 200px
   .icon-search
     &:hover
@@ -184,7 +184,7 @@ transform()
 .submenu
   padding 15px 10px 15px 0
   .btn
-    display block !important
+    display block
     font-size 14px
     margin-left 1px
     border 0
@@ -450,14 +450,14 @@ transform()
 
 @media all and (max-width: 1280px)
   .navbar .form-search
-    width 40%
+    width 30%
   .navbar-brand
     padding-left 0
     padding-right 0
 
 @media all and (max-width: 1000px)
   .navbar .form-search
-    width 20%
+    width 10%
 
 @media all and (max-width: 768px),screen and (device-width: 320px)
   .sidebar#sidebar
@@ -828,6 +828,7 @@ transform()
   .form-search
     margin-bottom 20px
     width 100%
+    clear both
   .nextdoor-single
     padding 10px
     overflow auto
