--- a/vonline_be/war/partials/maps.html
+++ b/vonline_be/war/partials/maps.html
@@ -3,14 +3,11 @@
 
 <div class="maps">
 
-
     <p>Сообщения видят жители домов, которые входят в эту группу</p>
 
     <div>
-        <img style="width: 100%" ng-src="{{ maps.url }}" alt=""/>
-
+        <img ng-src="{{ maps.url }}" alt=""/>
     </div>
-
 
 </div>
 
