--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -1,3 +1,4 @@
+
 //@import 'common.css'
 @import 'login.css'
 @import 'profile.css'
@@ -37,7 +38,7 @@ transform()
   padding 0
   max-width 1240px
   min-width 753px
-  min-height 100%
+  //min-height 100%
 
 .navbar-container
   text-align center
@@ -996,4 +997,6 @@ transform()
     font-size 16px
   h1
     font-size 40px
+
+
 
