--- a/vonline_be/war/partials/main.html
+++ b/vonline_be/war/partials/main.html
@@ -1,5 +1,5 @@
 
-        <section class="forum page" ng-show="base.lentaIsActive" ng-cloak> <!--  ng-controller="LentaController as lenta" -->
+        <section class="forum page ng-cloak" ng-show="base.lentaIsActive" ng-cloak> <!--  ng-controller="LentaController as lenta" -->
             <div class="message-input clearfix">
                 <textarea ng-model="lenta.wallMessageContent" class="no-resize" ng-keyup="base.messageChange($event,1)"
                     onblur="if(this.value=='') this.value='Написать сообщение';"
@@ -38,12 +38,12 @@
                         <span>группа</span>
                         <div class="btn-group hashtag-dropdown">
                             <button data-toggle="dropdown" class="btn btn-info btn-sm dropdown-toggle no-border">
-                                <span class="btn-group-text" ng-cloak># {{base.bufferSelectedGroup.visibleName}}</span>
+                                <span class="btn-group-text"># {{base.bufferSelectedGroup.visibleName}}</span>
                                 <span class="icon-caret-down icon-on-right"></span>
                             </button>
 
                             <ul class="dropdown-menu dropdown-blue">
-                                <li ng-repeat="group in lenta.groups"><a href="#" ng-click="selectGroupInDropdown_lenta(group.id)" ng-cloak># {{group.visibleName}}</a></li>
+                                <li ng-repeat="group in lenta.groups"><a href="#" ng-click="selectGroupInDropdown_lenta(group.id)"># {{group.visibleName}}</a></li>
                             </ul>
                         </div>
                     </div>
@@ -74,7 +74,7 @@
                                     <a ui-sref="profile({userId: {{ wallItem.topic.userInfo.id }} })">{{wallItem.topic.authorName}}</a>
                                 </div>
 
-                                <div class="text" ng-switch-when="message" ng-cloak>{{wallItem.topic.message.content}}</div>
+                                <div class="text" ng-switch-when="message" >{{wallItem.topic.message.content}}</div>
 
                                 <div class="attached" ng-show="wallItem.topic.message.images.length || wallItem.topic.message.documents.length">
                                     <a href="{{image.URL}}" class="fancybox" rel="attached-group-{{wallItem.topic.id}}" ng-repeat="image in wallItem.topic.message.images">
@@ -85,8 +85,8 @@
                                     </div>
                                 </div>
 
-                                <div class="poll" ng-switch-when="poll" ng-switch on="wallItem.topic.poll.alreadyPoll" ng-cloak>
-                                    <div class="text" ng-cloak>{{wallItem.topic.message.content}}</div>
+                                <div class="poll" ng-switch-when="poll" ng-switch on="wallItem.topic.poll.alreadyPoll" >
+                                    <div class="text" >{{wallItem.topic.message.content}}</div>
 
                                     <h5>{{wallItem.topic.poll.subject}}</h5>
 
@@ -126,7 +126,7 @@
                                 </div>
 
                                 <div class="lenta-item-bottom">
-                                    <span ng-cloak>{{wallItem.topic.message.createdEdit}}</span>
+                                    <span >{{wallItem.topic.message.createdEdit}}</span>
                                     <a href="#" ng-click="lenta.showAnswerInput($event,wallItem)">Комментировать</a>
                                 </div>
 
@@ -145,7 +145,7 @@
                                     <div class="name">
                                         <a ui-sref="profile({userId: {{ wallMessage.userInfo.id }} })">{{wallMessage.authorName}}</a>
                                     </div>
-                                    <div class="text" ng-cloak>{{wallMessage.content}}</div>
+                                    <div class="text" >{{wallMessage.content}}</div>
 
                                     <div class="attached" ng-show="wallMessage.images.length || wallMessage.documents.length">
                                         <a href="{{image.URL}}" class="fancybox" rel="attached-group-{{wallItem.topic.id+'-'+wallMessage.id}}" ng-repeat="image in wallMessage.images">
@@ -157,7 +157,7 @@
                                     </div>
 
                                     <div class="lenta-item-bottom">
-                                        <span ng-cloak>{{wallMessage.createdEdit}}</span>
+                                        <span >{{wallMessage.createdEdit}}</span>
                                         <a href="#" ng-click="lenta.showAnswerInput($event,wallItem,wallMessage)">Ответить</a>
                                     </div>
                                 </div>
@@ -178,7 +178,7 @@
                                         <i class="icon-share-alt"></i>
                                         Отправить
                                     </button>
-                                    <span class="error-info" ng-show="wallItem.isCreateCommentError">{{wallItem.createCommentErrorText}}</span>
+                                    <span class="error-info" ng-show="wallItem.isCreateCommentError" ng-click>{{wallItem.createCommentErrorText}}</span>
 
                                     <div class="btn-group attach-dropdown pull-right">
                                         <button data-toggle="dropdown" class="btn btn-info btn-sm dropdown-toggle no-border" data-producerid="0">
