--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -136,6 +136,21 @@ transform()
   .show-left
     display none
 
+.footer-left
+  border-top 1px solid #CCCCCC
+  padding-top 10px
+  margin-top 40px
+  text-align left
+  color #a6a6a6
+  ul
+    margin 0
+    li
+      list-style none
+      display inline-block
+      margin 0 5px
+      a
+        color #a6a6a6
+
 .sidebar-right
   position absolute
   right 0
