--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -126,6 +126,24 @@ h1 {
 .sidebar#sidebar .show-left {
   display: none;
 }
+.footer-left {
+  border-top: 1px solid #ccc;
+  padding-top: 10px;
+  margin-top: 40px;
+  text-align: left;
+  color: #a6a6a6;
+}
+.footer-left ul {
+  margin: 0;
+}
+.footer-left ul li {
+  list-style: none;
+  display: inline-block;
+  margin: 0 5px;
+}
+.footer-left ul li a {
+  color: #a6a6a6;
+}
 .sidebar-right {
   position: absolute;
   right: 0;
