--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -700,8 +700,14 @@ transform()
   .lenta-item-bottom
     position absolute
     bottom 3px
-  .lenta-item-hashtag
-    float right
+  .fa-star
+    color #CCCCCC
+    font-size 16px
+    margin-right 10px
+    margin-top 4px
+    &:hover
+    &.important
+      color #ffea4a
 
 .itemdiv.dialogdiv > .body
   margin-left 58px
