--- a/vonline_be/war/partials/wall-single.html
+++ b/vonline_be/war/partials/wall-single.html
@@ -1,64 +1,10 @@
 
-        <section class="forum page ng-cloak" ng-show="base.lentaIsActive" ng-cloak> <!--  ng-controller="LentaController as lenta" -->
-            <div class="message-input clearfix">
-                <textarea ng-model="lenta.wallMessageContent" class="no-resize" ng-keyup="base.messageChange($event,1)"
-                    onblur="if(this.value=='') this.value='Написать сообщение';"
-                    onfocus="if(this.value=='Написать сообщение') this.value='';"></textarea>
-
-                <div class="create-poll" ng-show="lenta.isPollShow">
-                    <a class="poll-cancel pull-right" title="отмена опроса" href="#" ng-click="lenta.isPollShow = false;lenta.isPollAvailable = true;">&times;</a>
-                    <h5>Тема опроса:</h5>
-                    <input type="text" ng-model="lenta.pollSubject"/>
-                    <h5>Варианты ответов:</h5>
-                    <div ng-repeat="input in lenta.pollInputs">
-                        <input ng-model="input.name" type="text"/>
-                    </div>
-                    <input type="text" class="poll-readonly" readonly value="Добавить ответ" ng-click="base.addPollInput($event,lenta)"/>
-                </div>
-
-                <div class="attach-area" id="attach-area-0"></div>
-                <div class="attach-area attach-area-doc" id="attach-doc-area-0"></div>
-
-                <div class="message-input-bottom">
-                    <div class="btn-group attach-dropdown pull-right">
-                        <button data-toggle="dropdown" class="btn btn-info btn-sm dropdown-toggle no-border" data-producerid="0">
-                        <span class="btn-group-text">Прикрепить</span>
-                        <span class="icon-caret-down icon-on-right"></span>
-                        </button>
-
-                        <ul class="dropdown-menu dropdown-blue">
-                        <li><input id="attachImage-0" type="file"/></li>
-                        <li><input id="attachDoc-0" type="file"/></li>
-                        <li><a href="#" ng-click="base.showPoll($event,lenta)" ng-show="lenta.isPollAvailable">Опрос</a></li>
-                        </ul>
-                    </div>
-                    <a class="btn btn-sm no-border btn-primary pull-left" href="#" ng-click="lenta.createWallMessage($event)">Отправить</a>
-
-                    <div class="hashtag pull-left">
-                        <span>группа</span>
-                        <div class="btn-group hashtag-dropdown">
-                            <button data-toggle="dropdown" class="btn btn-info btn-sm dropdown-toggle no-border">
-                                <span class="btn-group-text"># {{base.bufferSelectedGroup.visibleName}}</span>
-                                <span class="icon-caret-down icon-on-right"></span>
-                            </button>
-
-                            <ul class="dropdown-menu dropdown-blue">
-                                <li ng-repeat="group in lenta.groups"><a href="#" ng-click="selectGroupInDropdown_lenta(group.id)"># {{group.visibleName}}</a></li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <span class="error-info" ng-show="lenta.isCreateMessageError">{{lenta.createMessageErrorText}}</span>
-
-                </div>
-
-            </div>
+        <section class="forum page ng-cloak" ng-show="base.lentaIsActive" ng-cloak>
 
             <div class="lenta">
-                <div class="lenta-item" ng-repeat="wallItem in lenta.wallItems"
-                        ng-switch on="wallItem.topic.message.type">
+                <div class="lenta-item">
 
-                    <div class="wallitem-message" ng-switch-when="5">
+                    <div class="wallitem-message">
 
                         <div class="first-message clearfix" >
                             <a ui-sref="profile({userId: {{ wallItem.topic.userInfo.id }} })" class="user">
@@ -193,24 +139,6 @@
                                         </ul>
                                     </div>
                                 </span>
-                        </div>
-                    </div>
-
-
-                    <div class="wallitem-topic" ng-switch-when="1">
-                        <div class="talks-title">
-                            <div class="talks-title-left load-talk">
-                                <a ui-sref="talks-single({ talkId : {{wallItem.topic.id}} })">{{wallItem.topic.subject}}</a>
-                                <div>{{wallItem.topic.messageNum}} сообщений</div>
-                            </div>
-                            <div class="talks-title-right">
-                                <span class="label label-lg arrowed lenta-item-hashtag pull-right"
-                                      ng-class="wallItem.tagColor">{{wallItem.label}}</span>
-                                <div class="clearfix"></div>
-
-                                <div>Последнее обновление:</div>
-                                <div>{{wallItem.topic.lastUpdateEdit}}</div>
-                            </div>
                         </div>
                     </div>
 
